cabal-version: 1.12

name:           writ
version:        0.1.0.0
build-type:     Simple

library
  hs-source-dirs: src
  ghc-options: -Wextra -rtsopts -O2
  exposed-modules:
    Parser
  default-extensions:
      GeneralizedNewtypeDeriving
    , TemplateHaskell
  build-depends:
      base 
    , containers
    , lens
    , fresnel
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      QuickCheck
    , base
    , writ
  default-language: Haskell2010
